--- a/index.html
+++ b/index.html
@@ -440,6 +440,9 @@
               <input type="radio" name="situacao" value="Foi apenas multado, sem cumprimento de pena de serviços." />
               Apenas multado, sem cumprimento de pena de serviços.
             </label>
+               <label>
+              <input type="radio" name="situacao" value="MULTA." />
+              Apenas multado, sem cumprimento de pena de serviços.
           </div>
         </div>
 
