--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
             </label>
                <label>
               <input type="radio" name="situacao" value="MULTA." />
-              Apenas multado, sem cumprimento de pena de serviços.
+              Apenas multado.
           </div>
         </div>
 
